--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,8 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+# These individuals have changed or modified the orginal project in a new repository called atlas-AirBnB_clone_v2
+
+Joshua Cox <Joshua.Cox@atlasschool.com>
+Crystal Muyunga <Crystal.Muyunga@atlasschool.com>
